--- a/index.html
+++ b/index.html
@@ -244,6 +244,17 @@
         </div>
     </div>
 
+     <div class="product-box">
+        <div class="img-box">
+            <img src="">
+        </div>
+        <h2 class="product-title"></h2>
+        <div class="price-and-cart">
+            <span class="price"></span>
+            
+        </div>
+    </div>
+
 </div>
             
 
