--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
         <button class="btn-buy">Clear</button>
         <i class="ri-close-line" id="cart-close"></i>
 
+        <div class="ip-server">
+            <div class="amount-title">Host IP</div>
+            <div class="amount-input-container">
+                <input type="text" id="ipinput" class="hostip" value="192.168.x.x" min="0">
+            </div>
+        </div>
+
     </div>
     <div class="orders">
         <div class="order-header">
