--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
             </div>
         </div>
 
+        <div id="ip-feedback" style="display:none; color:red;"></div>
+
     </div>
     <div class="orders">
         <div class="order-header">
